# django-database-prefix

./: MANIFEST.in  README.md  pyproject.toml  setup.py
django_database_prefix/: models.py
