[tool.poetry]
name = "django-database-prefix"
version = "0.1.0"
description = ""
authors = ["Denis Verbin <den.verbin@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = >=3.6

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
